--- a/about.html
+++ b/about.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre mí</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre mí</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Sobre mí</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html">Sobre mí</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-    <h2>Mi historia</h2>
-    <p>Desde pequeño me interesó la tecnología, y ahora me dedico a crear sitios web </p>
-    <img src="https://via.placeholder.com/400" alt="Imagen sobre mí">
-  </section>
-  <footer>
-  </footer>
+    <header>
+        <h1>Sobre mí</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre mí</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h2>Mi historia</h2>
+        <p>Desde pequeño me interesó la tecnología, y ahora me dedico a crear sitios web y aprender desarrollo de software.</p>
+        <img src="https://via.placeholder.com/400" alt="Imagen sobre mí">
+    </section>
+    <footer>
+        <p>Derechos reservados &copy; 2025</p>
+    </footer>
 </body>
 </html>
