--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Web Personal</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Bienvenido a mi web personal</h1>
+    <header>
+        <h1>Bienvenido a mi página web</h1>
+    </header>
     <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html">Sobre mí</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
     </nav>
-  </header>
-  <section>
-    <img src="https://via.placeholder.com/400" alt="Imagen de ejemplo">
-  </section>
-  <footer>
-  </footer>
+    <main>
+        <section>
+            <h2>Acerca de mí</h2>
+            <p>¡Hola! Soy un entusiasta de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mí y mis proyectos.</p>
+            <img src="https://via.placeholder.com/300" alt="Imagen de ejemplo">
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Mi Página Web</p>
+    </footer>
 </body>
 </html>
