--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2>Acerca de mí</h2>
             <p>¡Hola! Soy un entusiasta de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mí y mis proyectos.</p>
-            <img src="https://via.placeholder.com/300" alt="Imagen de ejemplo">
+            <img src="img/mi-imagen.jpg" alt="Imagen sobre mi">
         </section>
     </main>
     <footer>
