--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <section>
         <h2>Mi historia</h2>
         <p>Desde pequeño me interesó la tecnología, y ahora me dedico a crear sitios web y aprender desarrollo de software.</p>
-        <img src="img/mi-imagen.jpg" alt="Imagen sobre mi">
+        <img src="img/photo.jpg" alt="Imagen sobre mi">
     </section>
     <footer>
         <p>Derechos reservados &copy; 2025</p>
