--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h2>Acerca de mí</h2>
-            <p>¡Hola! Soy un entusiasta de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mí y mis proyectos.</p>
+            <p>¡Hola! Soy un admirador de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mis proyectos.</p>
             <img src="img/perfil.jpg" alt="Imagen sobre mi">
             <img src="img/photo.jpg" alt="Imagen sobre mi">
         </section>
