--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Acerca de mí</h2>
             <p>¡Hola! Soy un admirador de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mis proyectos.</p>
             <img src="img/perfil.jpg" alt="Imagen sobre mi">
-            <img src="img/photo.jpg" alt="Imagen sobre mi">
+            <img src="img/paginaweb.jpg" alt="Imagen sobre mi">
         </section>
     </main>
     <footer>
