--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </header>
     <section>
         <h2>Mi historia</h2>
-        <p>Desde pequeño me interesó la tecnología, y ahora me dedico a estudiar un grado superior de desarrollo de aplicaciones web.</p>
+        <p>Desde pequeño me interesó la tecnología, y ahora me dedico a estudiar un grado superior de desarrollo de aplicaciones web en IES Los Albares.</p>
         <img src="img/photo.jpg" alt="Imagen sobre mi">
     </section>
     <footer>
