--- a/about.html
+++ b/about.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section id="curriculo">
+    <h2>Mi Currículo</h2>
+    <h3>Experiencia</h3>
+    <ul>
+        <li><strong>Desarrollador Web</strong> - IES los Albares 24-25</li>
+    </ul>
+
+    <h3>Habilidades</h3>
+    <ul>
+        <li>HTML, CSS, Java, XML</li>
+        <li>Git y GitHub</li>
+    </ul>
+
+    <h3>Educación</h3>
+    <ul>
+        <li>Grado Superior de desarrollo de aplicaciones web- IES Los Albares </li>
+        <li>Eduacion Secundaria y Bachillerato- IES Valle Del Segura</li>
+    </ul>
+</section>
+
     <header>
         <h1>Sobre mí</h1>
         <nav>
