--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p>¡Hola! Soy un admirador de la tecnología y la programación. En este sitio web, puedes encontrar información sobre mis proyectos.</p>
             <img src="img/perfil.jpg" alt="Imagen sobre mi">
             <img src="img/paginaweb.jpg" alt="Imagen sobre mi">
+            <a href="contacto.html" class="boton-contacto">¡Contáctame!</a>
         </section>
     </main>
     <footer>
