--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="img/perfil.jpg" alt="Imagen sobre mi">
             <img src="img/paginaweb.jpg" alt="Imagen sobre mi">
         </section>
-        <a href="contacto.html" class="boton-contacto">¡Contáctame!</a>
+        <a href="mailto:tucorreo@example.com" class="boton-contacto">¡Contáctame!</a>
     </main>
     <footer>
         <p>&copy; 2025 Mi Página Web</p>
